Load global.css in editor, use i18n for block variations, fix alignwide width, Ref: DEV-720

--- a/assets/src/sass/block-variations/_media-text.scss
+++ b/assets/src/sass/block-variations/_media-text.scss
@@ -41,7 +41,7 @@
   // Wide alignment adjustments
   &.alignwide {
     margin-inline: auto;
-    max-width: var(--wp--style--global--wide-size);
+    max-width: var(--wp--custom--grid-base);
   }
 
   // Full alignment adjustments
